zetasql/parser/testdata/with_offset.test
# Test cases for WITH OFFSET / WITH POSITION.
select pos1, pos2
  from T, T.arr AS arr WITH OFFSET AS pos1, T.arr WITH OFFSET pos2
--
QueryStatement [0-84] [select pos1...OFFSET pos2]
  Query [0-84] [select pos1...OFFSET pos2]
    Select [0-84] [select pos1...OFFSET pos2]
      SelectList [7-17] [pos1, pos2]
        SelectColumn [7-11] [pos1]
          PathExpression [7-11] [pos1]
            Identifier(pos1) [7-11] [pos1]
        SelectColumn [13-17] [pos2]
          PathExpression [13-17] [pos2]
            Identifier(pos2) [13-17] [pos2]
      FromClause [20-84] [from T, T....OFFSET pos2]
        Join(COMMA) [25-84] [T, T.arr AS...OFFSET pos2]
          Join(COMMA) [25-60] [T, T.arr AS...OFFSET AS pos1]
            TablePathExpression [25-26] [T]
              PathExpression [25-26] [T]
                Identifier(T) [25-26] [T]
            Location [26-27] [,]
            TablePathExpression [28-60] [T.arr AS arr...OFFSET AS pos1]
              PathExpression [28-33] [T.arr]
                Identifier(T) [28-29] [T]
                Identifier(arr) [30-33] [arr]
              Alias [34-40] [AS arr]
                Identifier(arr) [37-40] [arr]
              WithOffset [41-60] [WITH OFFSET AS pos1]
                Alias [53-60] [AS pos1]
                  Identifier(pos1) [56-60] [pos1]
          Location [60-61] [,]
          TablePathExpression [62-84] [T.arr WITH OFFSET pos2]
            PathExpression [62-67] [T.arr]
              Identifier(T) [62-63] [T]
              Identifier(arr) [64-67] [arr]
            WithOffset [68-84] [WITH OFFSET pos2]
              Alias [80-84] [pos2]
                Identifier(pos2) [80-84] [pos2]
--
SELECT
  pos1,
  pos2
FROM
  T,
  T.arr AS arr WITH OFFSET AS pos1,
  T.arr WITH OFFSET AS pos2
==

# WITH POSITION syntax was supported for a while but has been removed.
select *
  from T, T.arr AS arr WITH POSITION AS pos1
--
ERROR: Syntax error: Expected keyword OFFSET but got identifier "POSITION" [at 2:29]
  from T, T.arr AS arr WITH POSITION AS pos1
                            ^
==

select a from arr a WITH OFFSET
--
QueryStatement [0-31] [select a from...WITH OFFSET]
  Query [0-31] [select a from...WITH OFFSET]
    Select [0-31] [select a from...WITH OFFSET]
      SelectList [7-8] [a]
        SelectColumn [7-8] [a]
          PathExpression [7-8] [a]
            Identifier(a) [7-8] [a]
      FromClause [9-31] [from arr a WITH OFFSET]
        TablePathExpression [14-31] [arr a WITH OFFSET]
          PathExpression [14-17] [arr]
            Identifier(arr) [14-17] [arr]
          Alias [18-19] [a]
            Identifier(a) [18-19] [a]
          WithOffset [20-31] [WITH OFFSET]
--
SELECT
  a
FROM
  arr AS a WITH OFFSET
==

select 1+pos from T.arr WITH OFFSET pos
--
QueryStatement [0-39] [select 1+pos...OFFSET pos]
  Query [0-39] [select 1+pos...OFFSET pos]
    Select [0-39] [select 1+pos...OFFSET pos]
      SelectList [7-12] [1+pos]
        SelectColumn [7-12] [1+pos]
          BinaryExpression(+) [7-12] [1+pos]
            IntLiteral(1) [7-8] [1]
            PathExpression [9-12] [pos]
              Identifier(pos) [9-12] [pos]
      FromClause [13-39] [from T.arr WITH OFFSET pos]
        TablePathExpression [18-39] [T.arr WITH OFFSET pos]
          PathExpression [18-23] [T.arr]
            Identifier(T) [18-19] [T]
            Identifier(arr) [20-23] [arr]
          WithOffset [24-39] [WITH OFFSET pos]
            Alias [36-39] [pos]
              Identifier(pos) [36-39] [pos]
--
SELECT
  1 + pos
FROM
  T.arr WITH OFFSET AS pos
==

select arr, pos from arr WITH pos
--
ERROR: Syntax error: Expected keyword OFFSET but got identifier "pos" [at 1:31]
select arr, pos from arr WITH pos
                              ^
==

select pos from WITH OFFSET pos
--
ERROR: Syntax error: Unexpected keyword WITH [at 1:17]
select pos from WITH OFFSET pos
                ^
==

select pos, value
  from keys AS key WITH OFFSET pos
       JOIN
       values AS value WITH OFFSET pos USING (pos)
  where key='Mykey'
--
QueryStatement [0-135] [select pos...key='Mykey']
  Query [0-135] [select pos...key='Mykey']
    Select [0-135] [select pos...key='Mykey']
      SelectList [7-17] [pos, value]
        SelectColumn [7-10] [pos]
          PathExpression [7-10] [pos]
            Identifier(pos) [7-10] [pos]
        SelectColumn [12-17] [value]
          PathExpression [12-17] [value]
            Identifier(value) [12-17] [value]
      FromClause [20-115] [from keys...USING (pos)]
        Join [25-115] [keys AS key...USING (pos)]
          TablePathExpression [25-52] [keys AS key WITH OFFSET pos]
            PathExpression [25-29] [keys]
              Identifier(keys) [25-29] [keys]
            Alias [30-36] [AS key]
              Identifier(key) [33-36] [key]
            WithOffset [37-52] [WITH OFFSET pos]
              Alias [49-52] [pos]
                Identifier(pos) [49-52] [pos]
          Location [60-64] [JOIN]
          TablePathExpression [72-103] [values AS...OFFSET pos]
            PathExpression [72-78] [values]
              Identifier(values) [72-78] [values]
            Alias [79-87] [AS value]
              Identifier(value) [82-87] [value]
            WithOffset [88-103] [WITH OFFSET pos]
              Alias [100-103] [pos]
                Identifier(pos) [100-103] [pos]
          UsingClause [104-115] [USING (pos)]
            Identifier(pos) [111-114] [pos]
      WhereClause [118-135] [where key='Mykey']
        BinaryExpression(=) [124-135] [key='Mykey']
          PathExpression [124-127] [key]
            Identifier(key) [124-127] [key]
          StringLiteral('Mykey') [128-135] ['Mykey']
--
SELECT
  pos,
  value
FROM
  keys AS key WITH OFFSET AS pos
  JOIN
  values AS value WITH OFFSET AS pos
  USING(pos)
WHERE
  key = 'Mykey'
==

select * from structs AS s WITH OFFSET AS pos
--
QueryStatement [0-45] [select * from...OFFSET AS pos]
  Query [0-45] [select * from...OFFSET AS pos]
    Select [0-45] [select * from...OFFSET AS pos]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-45] [from structs...OFFSET AS pos]
        TablePathExpression [14-45] [structs AS...OFFSET AS pos]
          PathExpression [14-21] [structs]
            Identifier(structs) [14-21] [structs]
          Alias [22-26] [AS s]
            Identifier(s) [25-26] [s]
          WithOffset [27-45] [WITH OFFSET AS pos]
            Alias [39-45] [AS pos]
              Identifier(pos) [42-45] [pos]
--
SELECT
  *
FROM
  structs AS s WITH OFFSET AS pos
==

select * from t1 WITH OFFSET offset, t2 WITH OFFSET as offset
--
QueryStatement [0-61] [select * from...as offset]
  Query [0-61] [select * from...as offset]
    Select [0-61] [select * from...as offset]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-61] [from t1 WITH...as offset]
        Join(COMMA) [14-61] [t1 WITH OFFSET...as offset]
          TablePathExpression [14-35] [t1 WITH OFFSET offset]
            PathExpression [14-16] [t1]
              Identifier(t1) [14-16] [t1]
            WithOffset [17-35] [WITH OFFSET offset]
              Alias [29-35] [offset]
                Identifier(offset) [29-35] [offset]
          Location [35-36] [,]
          TablePathExpression [37-61] [t2 WITH OFFSET as offset]
            PathExpression [37-39] [t2]
              Identifier(t2) [37-39] [t2]
            WithOffset [40-61] [WITH OFFSET as offset]
              Alias [52-61] [as offset]
                Identifier(offset) [55-61] [offset]
--
SELECT
  *
FROM
  t1 WITH OFFSET AS offset,
  t2 WITH OFFSET AS offset
==

select * from f1 WITH abc
--
ERROR: Syntax error: Expected keyword OFFSET but got identifier "abc" [at 1:23]
select * from f1 WITH abc
                      ^
==

# Combining WITH OFFSET and FOR SYSTEM TIME AS OF
select pos1, pos2
  from T, T.arr AS arr WITH OFFSET AS pos1, T.arr WITH OFFSET pos2
  FOR SYSTEM TIME AS OF '2007-01-02';
--
QueryStatement [0-121] [select pos1...2007-01-02']
  Query [0-121] [select pos1...2007-01-02']
    Select [0-121] [select pos1...2007-01-02']
      SelectList [7-17] [pos1, pos2]
        SelectColumn [7-11] [pos1]
          PathExpression [7-11] [pos1]
            Identifier(pos1) [7-11] [pos1]
        SelectColumn [13-17] [pos2]
          PathExpression [13-17] [pos2]
            Identifier(pos2) [13-17] [pos2]
      FromClause [20-121] [from T, T....2007-01-02']
        Join(COMMA) [25-121] [T, T.arr AS...2007-01-02']
          Join(COMMA) [25-60] [T, T.arr AS...OFFSET AS pos1]
            TablePathExpression [25-26] [T]
              PathExpression [25-26] [T]
                Identifier(T) [25-26] [T]
            Location [26-27] [,]
            TablePathExpression [28-60] [T.arr AS arr...OFFSET AS pos1]
              PathExpression [28-33] [T.arr]
                Identifier(T) [28-29] [T]
                Identifier(arr) [30-33] [arr]
              Alias [34-40] [AS arr]
                Identifier(arr) [37-40] [arr]
              WithOffset [41-60] [WITH OFFSET AS pos1]
                Alias [53-60] [AS pos1]
                  Identifier(pos1) [56-60] [pos1]
          Location [60-61] [,]
          TablePathExpression [62-121] [T.arr WITH...2007-01-02']
            PathExpression [62-67] [T.arr]
              Identifier(T) [62-63] [T]
              Identifier(arr) [64-67] [arr]
            WithOffset [68-84] [WITH OFFSET pos2]
              Alias [80-84] [pos2]
                Identifier(pos2) [80-84] [pos2]
            ForSystemTime [87-121] [FOR SYSTEM...2007-01-02']
              StringLiteral('2007-01-02') [109-121] ['2007-01-02']
--
SELECT
  pos1,
  pos2
FROM
  T,
  T.arr AS arr WITH OFFSET AS pos1,
  T.arr WITH OFFSET AS pos2 FOR SYSTEM_TIME AS OF '2007-01-02'
